fix github actions

--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -1,42 +1,42 @@
 {
-  "welcome": "Bienvenido",
   "about": "Sobre mí",
-  "contact": "Contacto",
-  "language": "Idioma",
-  "english": "Inglés",
-  "spanish": "Español",
-  "software-developer": "Desarrollador de Software",
   "about-me-description": "Soy un Desarrollador de Software con 3 años de experiencia como Desarrollador Web. El trabajo en equipo es mi forma favorita de aprender. Siempre estoy buscando mejorar la calidad de mi código para hacerlo más legible y mantenible.",
   "about-me-dream": "Mi sueño es trabajar en productos con impacto global que positivamente cambien la vida de millones de personas. Tengo experiencia con ",
   "about-me-dream-2": "y estoy trabajando para ser un Indie Hacker.",
+  "aleluya-description": "Desarrollo y mantenimiento de un producto de nómina y recursos humanos, creando nuevas funciones y corrigiendo errores. Trabajo con un equipo multidisciplinar, incluidos diseñadores y desarrolladores, para garantizar que el producto cumpla los requisitos y las expectativas de sus usuarios.",
+  "aleluya-freelance-description": "Corrección de errores y desarrollo de nuevas funciones para un producto de nómina y recursos humanos. Trabajo con un equipo multidisciplinar, incluidos diseñadores y desarrolladores, para garantizar que el producto cumpla los requisitos y las expectativas de sus usuarios.",
+  "april-2022": "Abril 2022",
+  "august-2024": "Agosto 2024",
+  "backend-development": "Desarrollo Backend",
+  "by": "por",
+  "code": "Código",
+  "contact": "Contacto",
+  "current": "Actual",
+  "database": "Base de datos",
+  "december-2024": "Diciembre 2024",
+  "devpeoplz-description": "Desarrollo de un portal de empleo como desarrollador fullstack, dirigido bajo la supervisión directa del CEO para entregar un producto de alta calidad.",
+  "devpeoplz-project-description": "Página con información de la empresa para publicar ofertas de empleo y para desarrolladores para aplicar a ellas.",
+  "english": "Inglés",
   "experience": "Experiencia",
+  "frontend-development": "Desarrollo Frontend",
   "frontend-developer": "Desarrollador Frontend",
   "frontend-developer-freelance": "Desarrollador Frontend Freelance",
-  "january-2025": "Enero 2025",
-  "current": "Actual",
-  "aleluya-description": "Desarrollo y mantenimiento de un producto de nómina y recursos humanos, creando nuevas funciones y corrigiendo errores. Trabajo con un equipo multidisciplinar, incluidos diseñadores y desarrolladores, para garantizar que el producto cumpla los requisitos y las expectativas de sus usuarios.",
-  "august-2024": "Agosto 2024",
-  "december-2024": "Diciembre 2024",
-  "aleluya-freelance-description": "Corrección de errores y desarrollo de nuevas funciones para un producto de nómina y recursos humanos. Trabajo con un equipo multidisciplinar, incluidos diseñadores y desarrolladores, para garantizar que el producto cumpla los requisitos y las expectativas de sus usuarios.",
-  "devpeoplz-description": "Desarrollo de un portal de empleo como desarrollador fullstack, dirigido bajo la supervisión directa del CEO para entregar un producto de alta calidad.",
-  "nov-2022": "Noviembre 2022",
-  "january-2024": "Enero 2024",
-  "april-2022": "Abril 2022",
-  "projects": "Proyectos",
-  "humedad-arena-description": "Calcula el porcentaje de humedad en la arena utilizada para la producción de concreto.",
   "frontend-mentor-challenges": "Retos de Frontend Mentor",
   "frontend-mentor-challenges-description": "Soluciones a los desafíos de Frontend Mentor, un sitio web con diseños para entrenar tus habilidades como desarrollador frontend.",
-  "devpeoplz-project-description": "Página con información de la empresa para publicar ofertas de empleo y para desarrolladores para aplicar a ellas.",
-  "poketrivia-description": "Juego de adivinación de Pokémon usando React-Query para consumir datos de la API de Pokémon.",
-  "poketrivia-repo": "https://github.com/LEstebanR/poketrivia",
-  "code": "Código",
+  "humedad-arena-description": "Calcula el porcentaje de humedad en la arena utilizada para la producción de concreto.",
+  "january-2024": "Enero 2024",
+  "january-2025": "Enero 2025",
+  "language": "Idioma",
   "live-demo": "Demo",
-  "skills": "Habilidades",
-  "frontend-development": "Desarrollo Frontend",
-  "backend-development": "Desarrollo Backend",
-  "database": "Base de datos",
-  "programing-languages": "Lenguajes de programación",
   "location": "Ubicación",
   "made-with": "Hecho con",
-  "by": "por"
+  "nov-2022": "Noviembre 2022",
+  "poketrivia-description": "Juego de adivinación de Pokémon usando React-Query para consumir datos de la API de Pokémon.",
+  "poketrivia-repo": "https://github.com/LEstebanR/poketrivia",
+  "programing-languages": "Lenguajes de programación",
+  "projects": "Proyectos",
+  "skills": "Habilidades",
+  "software-developer": "Desarrollador de Software",
+  "spanish": "Español",
+  "welcome": "Bienvenido"
 }
